# knowledge-bases

./: .gitignore  .kbases.jsonl  AGENTS.md  LICENSE.txt  README.md  design-next-claim.md  dune  dune-project  knowledge-bases.opam  test-readability.md
docs/: index.md  product-requirements.md
docs/designs/: design-agent-ergonomics.md  design-feature-gaps.md  design-launch-readiness.md  design-multi-id.md  design-uninstall.md
docs/lib/: architecture.md  correct-construction.md  principles.md  unused-exports.md
docs/scripts/: principles.md
docs/test/: principles.md
docs/test-common/: architecture.md
docs/test-integration/: architecture.md  deferred-tests.md  principles.md
lib/: dune
lib/control/: assert.ml  assert.mli  exception.ml  exception.mli  git.ml  git.mli  io.ml  io.mli
lib/data/: char.ml  char.mli  content.ml  content.mli  entity.ml  entity.mli  identifier.ml  identifier.mli  item.ml  item.mli  kb_filenames.ml  kb_filenames.mli  namespace.ml  namespace.mli  note.ml  note.mli  relation.ml  relation.mli  relation_kind.ml  relation_kind.mli  result.ml  result.mli  string.ml  string.mli  timestamp.ml  timestamp.mli  title.ml  title.mli  todo.ml  todo.mli
lib/data/uuid/: base32.ml  base32.mli  typeid.ml  typeid.mli  uuidv7.ml  uuidv7.mli
lib/repository/: config.ml  config.mli  entity_repo.ml  entity_repo.mli  jsonl.ml  jsonl.mli  niceid.ml  niceid.mli  note.ml  note.mli  relation.ml  relation.mli  root.ml  root.mli  sqlite.ml  sqlite.mli  todo.ml  todo.mli
lib/service/: config_service.ml  config_service.mli  delete_service.ml  delete_service.mli  gc_service.ml  gc_service.mli  git.ml  git.mli  graph_service.ml  graph_service.mli  item_service.ml  item_service.mli  kb_service.ml  kb_service.mli  lifecycle.ml  lifecycle.mli  mutation_service.ml  mutation_service.mli  note_service.ml  note_service.mli  parse.ml  parse.mli  query_service.ml  query_service.mli  relation_service.ml  relation_service.mli  show_service.ml  show_service.mli  sync_service.ml  sync_service.mli  todo_service.ml  todo_service.mli
prompts/activities/: code-review.md  design-document.md  implementation-plan.md
prompts/design/: 1-requirements.md  2-background.md  3-requirements-refinement.md  4-approaches.md
prompts/design/examples/: design-jsonl-header.md  design-next-and-claim.md  performance-tests.md
prompts/development/: code-review.md  design-document.md  implementation-plan.md
prompts/maintenance/: build-validation.md  code-organization.md  documentation-upkeep.md  helper-usage.md  warning-audit.md
scripts/: check-integration-test-naming.py  check-test-naming.py  check-unused.py  dune  find-unused.py  install-pre-push-hook.sh  loc.sh  setup-dev-env.sh  validate-build.sh  watch-build.sh
test/: dune
test-common/: dune  test_common.ml
test-integration/: add_note_expect.ml  add_todo_expect.ml  archive_expect.ml  claim_expect.ml  close_expect.ml  config_expect.ml  delete_expect.ml  dune  flush_expect.ml  gc_expect.ml  help_expect.ml  init_expect.ml  init_local_mode_expect.ml  json_expect.ml  list_expect.ml  list_extended_expect.ml  list_filter_expect.ml  list_json_expect.ml  next_expect.ml  rebuild_expect.ml  relate_expect.ml  reopen_expect.ml  resolve_expect.ml  show_basic_expect.ml  show_expect.ml  show_json_expect.ml  show_relations_expect.ml  test_helper.ml  uninstall_expect.ml  unrelate_expect.ml  update_expect.ml  workflow_expect.ml  workflow_lifecycle_expect.ml  workflow_local_mode_expect.ml  workflow_persistence_expect.ml  workflow_planning_expect.ml  workflow_progression_expect.ml
test-perf/: dune  perf_harness.ml  perf_harness.mli  perf_main.ml  perf_scenarios.ml  perf_scenarios.mli
test/control/: assert_expect.ml  dune  exception_expect.ml  git_expect.ml
test/data/: char_expect.ml  content_expect.ml  dune  identifier_expect.ml  namespace_expect.ml  note_expect.ml  relation_expect.ml  relation_kind_expect.ml  result_expect.ml  string_expect.ml  timestamp_expect.ml  title_expect.ml  todo_expect.ml
test/data/uuid/: base32_expect.ml  dune  typeid_expect.ml  uuidv7_expect.ml
test/repository/: config_expect.ml  dune  jsonl_expect.ml  niceid_expect.ml  note_expect.ml  note_repo_expect.ml  relation_expect.ml  relation_repo_expect.ml  sqlite_expect.ml  test_helpers.ml  todo_expect.ml  todo_repo_expect.ml
test/service/: config_service_get_expect.ml  config_service_set_expect.ml  delete_service_expect.ml  dune  gc_service_expect.ml  git_expect.ml  graph_service_expect.ml  kb_service_expect.ml  kb_service_local_mode_expect.ml  lifecycle_expect.ml  lifecycle_init_expect.ml  lifecycle_uninstall_expect.ml  mutation_service_archive_expect.ml  mutation_service_claim_expect.ml  mutation_service_expect.ml  mutation_service_reopen_expect.ml  mutation_service_resolve_expect.ml  mutation_service_update_expect.ml  note_service_expect.ml  parse_expect.ml  query_service_count_expect.ml  query_service_expect.ml  query_service_list_expect.ml  query_service_show_expect.ml  relation_service_expect.ml  relation_service_relate_expect.ml  relation_service_unrelate_expect.ml  show_service_expect.ml  sync_service_expect.ml  test_helpers.ml  test_helpers.mli  todo_service_expect.ml
