(env
 ; Inherit standard flags but specifically disable warnings:
 ;   warning 42 [disambiguated-name] — Type-directed disambiguation for record fields,
 ;                                     won't compile with OCaml <= 4.00, we don't care.

 ; Development profile settings
 (dev
  ; Enable all warnings (+a) and treat them all as errors (-warn-error +a)
  (flags (:standard -w +a-42 -warn-error +a)))

 ; Release profile settings
 (release
  ; Enable all warnings (+a) and treat them all as errors (-warn-error +a)
  (flags (:standard -w +a-42 -warn-error +a))))

; runcheck: top-level check alias.  Composes all project-wide checks.
; Exits non-zero if any check fails.  Currently runs:
;   - check-unused: detects exported values with no external references
;   - check-test-naming: verifies unit test filenames match source modules
;   - check-integration-test-naming: verifies integration test filenames match CLI commands
(rule
 (alias runcheck)
 (deps
  (alias_rec check-unused)
  (alias_rec check-test-naming)
  (alias_rec check-integration-test-naming))
 (action (progn)))
