(include_subdirs no)

(env
 ; Apply to all profiles (_)
 (_
  (flags
   ; Inherit standard flags but specifically disable warnings:
   ;   warning 40 [name-out-of-scope] — Expect tests generate types with names out of scope
   ;   warning 70 [missing-mli]       — Expect tests don't have interface files
   (:standard -w -40-70))))

(library
 (name kbases_integration_tests)
 (inline_tests
  ; (universe) defeats dune's incremental caching so tests always re-run.
  ; Without it, a failed `dune runtest` followed by another `dune runtest`
  ; (with no source changes) silently succeeds — dune considers the tests
  ; "up to date" and skips them. This is important for subprocess-based
  ; integration tests whose output can vary with the host environment
  ; (see the TERM/cmdliner discussion in test_helper.ml).
  (deps %{bin:bs} (universe)))
 (libraries kbases unix str)
 (preprocess (pps ppx_inline_test ppx_expect)))
