(include_subdirs qualified)

(env
 ; Apply to all profiles (_)
 (_
  (flags
   ; Inherit standard flags but specifically disable warnings:
   ;   warning 40 [name-out-of-scope] — Expect tests generate types with names out of scope
   ;   warning 70 [missing-mli]       — Expect tests don't have interface files
   ;   warning 4  [fragile-match]     — Allow catch-all error branches that delegate to an exhaustive pp_error
   (:standard -w -40-70-4))))

(library
 (name kbases_tests)
 (inline_tests)
 (libraries kbases)
 (preprocess (pps ppx_inline_test ppx_expect))
)